autoformat all